@@ -12,6 +12,8 @@ PHP                                                                        NEWS
 - Fixed segfault on invalid session.save_path. (Hannes)
 - Fixed leaks in imap when a mail_criteria is used. (Pierre)
 
+- Fixed bug #48256 (Crash due to double-linking of history.o).
+  (tstarling at wikimedia dot org)
 - Fixed bug #48248 (SIGSEGV when access to private property via &__get). 
   (Felipe)
 - Fixed bug #48240 (DBA Segmentation fault dba_nextkey). (Felipe)
